style: RentalCreateRequest -> CreateRentalCommand 네이밍 변경 (#68)